# my-work

./: batch_bootstrapping.cpp  batch_bootstrapping.h  batch_framework.cpp  batch_framework.h  batch_ops.cpp  batch_ops.h  bb_params.h  bb_utils.h  hom_dft.cpp  hom_dft.h  main  main.cpp
mk_benchmark_fix/: bb_params.h  bench_sk  benchmark_mk.cpp  benchmark_sk.cpp  mk_bootstrapping.cpp  mk_lwe.cpp  mk_ops.cpp  mk_tfhe_structs.h
mk_benchmark_fix_134/: bench_mk  benchmark_mk.cpp  mk_bootstrapping.cpp  mk_ops.cpp  mk_tfhe_structs.h
mk_benchmark_fixed_v2/: bench_mk  mk_params.h  mk_tfhe_structs.h
mk_debug_analyze/: mk_bootstrapping.cpp  mk_lwe.cpp  mk_ops.cpp  mk_params.h  mk_test  mk_tfhe_structs.h
mk_debug_analyze_wait/: main_mk_test.cpp  mk_bootstrapping.cpp  mk_lwe.cpp  mk_ops.cpp  mk_params.h  mk_test  mk_tfhe_structs.h
mk_debug_build/: main_mk_test.cpp  mk_bootstrapping.cpp  mk_lwe.cpp  mk_test  mk_tfhe_structs.h
mk_debug_fix_134/: main_mk_test.cpp  mk_bootstrapping.cpp  mk_params.h  mk_test  mk_tfhe_structs.h
mk_lightweight_test/: bb_params.h  main_mk_test.cpp  mk_lwe.cpp  (+3 more)
mk_profile_k3_final/: CMakeCache.txt  CMakeLists.txt  Makefile  bb_params.h  cmake_install.cmake  include_tree.txt  main_mk_test  main_mk_test.cpp  mk_bootstrapping.cpp  mk_lwe.cpp  mk_methods.cpp  mk_methods.h  mk_ops.cpp  mk_ops.h  mk_packed_ops.cpp  mk_packed_ops.h  mk_params.cpp  mk_params.h  mk_profile_k2_final  mk_profile_k2_final_asan  mk_profile_k3  mk_profile_k3_final  mk_profiler.cpp  mk_profiler.h  mk_test_blind_rotate_dft.cpp  mk_test_dummy.cpp  mk_tfhe_structs.h  mk_utils.h
(+203 files in other folders)
